@@ -65,8 +65,6 @@ libgdmwm_a_SOURCES = \
 	gdmwm.h
 
 libgdmcommon_a_SOURCES = \
-	gdmwm.c			\
-	gdmwm.h			\
 	gdmlanguages.c		\
 	gdmlanguages.h		\
 	gdmuser.c		\
@@ -94,6 +92,7 @@ gdmsetup_SOURCES = \
 gdmchooser_LDFLAGS = -export-dynamic
 gdmchooser_LDADD = \
 	$(EXTRA_CHOOSER_LIBS)	\
+	libgdmwm.a		\
 	libgdmcommon.a		\
 	$(GUIGLADE_LIBS)	\
 	$(X_LIBS)		\
@@ -112,6 +111,7 @@ gdmchooser_LDADD = \
 	-lviciousui
 
 gdmlogin_LDADD = \
+	libgdmwm.a		\
 	libgdmcommon.a		\
 	$(GUING_LIBS)		\
 	$(X_LIBS)		\
